feat: add epg property for playlists table and subscription-worker, add epg text-input ui for m3u data source.

--- a/i18n/src/main/res/values-zh-rCN/feat_setting.xml
+++ b/i18n/src/main/res/values-zh-rCN/feat_setting.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="feat_setting_placeholder_url">订阅链接</string>
+    <string name="feat_setting_placeholder_epg">EPG 链接（可选）</string>
     <string name="feat_setting_app_version">应用版本</string>
     <string name="feat_setting_label_subscribe">订阅</string>
 
