--- a/i18n/src/main/res/values/feat_setting.xml
+++ b/i18n/src/main/res/values/feat_setting.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="feat_setting_placeholder_url">playlist link</string>
+    <string name="feat_setting_placeholder_epg">epg link (optional)</string>
     <string name="feat_setting_app_version">app version</string>
     <string name="feat_setting_label_subscribe">subscribe</string>
     <string name="feat_setting_success_subscribe">subscribe successfully</string>
